--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "gulp-concat": "^2.6.1",
     "gulp-sass": "^5.1.0",
     "sass": "^1.58.3"
+  },
+  "dependencies": {
+    "gulp-file-include": "^2.3.0"
   }
 }
