--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "sass": "^1.58.3"
   },
   "dependencies": {
-    "gulp-file-include": "^2.3.0"
+    "gulp-file-include": "^2.3.0",
+    "swiper": "^9.3.2"
   }
 }
